[package]
name = "gw2api-rs-test"
description = "Tests for the gw2api-rs crate"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
repository = "https://github.com/MrGunflame/gw2api-rs"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
gw2api-rs = { version = "*", path = "../gw2api-rs", features = ["blocking"] }
