[package]
name = "gw2api-rs"
description = "An asynchronous wrapper for the official Guild Wars 2 api"
version = "0.2.0"
edition = "2021"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
repository = "https://github.com/MrGunflame/gw2api-rs"
license = "MIT OR Apache-2.0"
publish = true

[features]
default = []
blocking = ["dep:tokio"]

[dependencies]
hyper = { version = "0.14.18", features = ["client", "tcp", "http1", "http2"] }
hyper-tls = "0.5.0"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.18.2", features = ["rt"], optional = true }
